# achitecture_ws

./: .enregistrement.sh.swp  .gitignore  02_09_2024_15_11inspva.csv  02_09_2024_15_11inspva.gpx  04_09_2024_14_08inspva.csv  04_09_2024_14_08inspva.gpx  29.gpx  GO.sh  GPSd.csv  GPSd.gpx  GPSd29.csv  GPSd29.gpx  GPSg.csv  GPSg.gpx  GPSg29.csv  GPSg29.gpx  MEd.csv  MEd.gpx  MEg.csv  MEg.gpx  README.md  STOP.sh  curved_gpx_track.gpx  curved_straight_gpx_track.gpx  curved_track.gpx  enregistrement.sh  generated_track.gpx  inspva.csv  inspva.gpx  interpolated_points.gpx  loop.csv  new_29.csv  new_29.gpx  new_29_distance.csv  notes.md  obstacles_assignment.cpp  q.csv  q.gpx  road_model copy.cpp  shifted_points_left.gpx  (+3 more)
install/: .rosinstall  _setup_util.py  setup.sh
install/include/message_project_s/: EgoData.h  EgoDataReport.h  GenericSmartData.h  LaneAlignmentME_1.h  ObstacleAlignment.h  ObstacleAlignmentReport_1.h  ObstacleAlignment_1.h  Time.h  esrsrr.h  sync.h
record_1/: inspva  steering_report  wheel_position_report  wheel_speed_report
record_2/: inspva  steering_report  wheel_position_report  wheel_speed_report
scripts/: csv_to_gpx.py  curvature.py  curved.py  distance.py  generate_gpx.py  gpx_to_csv.py  incremente.py  interpolate.py  loop.py  loop_curved.py  shifted_coord.py
scripts/Track_29/: GPSd.csv  GPSd.gpx  GPSd1M.csv  GPSd1M.gpx  GPSg.csv  GPSg.gpx  GPSg1M.csv  GPSg1M.gpx  MEd.csv  MEd.gpx  MEg.csv  MEg.gpx  track.csv  track.gpx
src/A mettre dans devel_include_project_s_msgs/: Configurations.h  Tableau_Circuit_huit.h  Tableau_Circuit_middle.h  Tableau_Circuit_réduit.h
src/alignment/: CMakeLists.txt  package.xml
src/arduino_replacement/: CMakeLists.txt  package.xml
src/communication_interfaces/: CMakeLists.txt  package.xml
src/decision_driving/: CMakeLists.txt
src/decision_mission/: CMakeLists.txt  package.xml
src/environment_description/: CMakeLists.txt
src/environment_model/: CMakeLists.txt  package.xml
src/hmi_as/: CMakeLists.txt  setup.py
src/hmi_io/: CMakeLists.txt  package.xml  setup.py
src/lanes_fusion/: CMakeLists.txt
src/launch_project_s/: CMakeLists.txt
src/listener/: CMakeLists.txt  package.xml
src/marker_generator/: CMakeLists.txt
src/navigation_system/: CMakeLists.txt  package.xml
src/obstacles_fusion/: CMakeLists.txt
src/project_s_msgs/: CMakeLists.txt  package.xml
src/sekonix/: CMakeLists.txt
src/sensor_models/: CMakeLists.txt  package.xml
src/test_project_s/: test_project_s.ino
src/topics_rviz_plugin-kinetic/: .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  package.xml  topics_rviz_plugin.rosinstall
src/topics_rviz_plugin-kinetic/include/topics_rviz_plugin/: display_topics.hpp  topic_info.hpp
src/topics_rviz_plugin-kinetic/src/: display_topics.cpp  topic_info.cpp
src/vehicle/: CMakeLists.txt
src/vehicle_control/: CMakeLists.txt  package.xml
src/vehicle_sensors/: CMakeLists.txt
(+917 files in other folders)
